--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/uuid": "^8.3.1",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "ts-node-dev": "^1.1.8"
   }
 }
