--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -21,8 +22,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "@types/uuid": "^8.3.1",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8"
   }
 }
