--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.37",
     "typescript": "^4.3.5",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "jest": "^27.0.6",
