--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
-    "test": "jest"
+    "test": "jest",
+    "seed": "ts-node-dev ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.1",
@@ -18,10 +20,12 @@
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.37",
+    "typeorm-seeding": "^1.6.1",
     "typescript": "^4.3.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/swagger-ui-express": "^4.1.3",
