--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
@@ -32,6 +33,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
