--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "jest",
-    "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
+    "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "build": "node src/server.ts"
   },
   "dependencies": {
     "aws-sdk": "^2.991.0",
@@ -23,6 +24,7 @@
     "multer": "^1.4.3",
     "multer-s3": "^2.9.0",
     "pg": "^8.7.1",
+    "pm2": "^5.1.2",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.6.0",
