--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "jest",
     "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
-    "build": "node src/server.ts"
+    "build": "tsc"
   },
   "dependencies": {
     "aws-sdk": "^2.991.0",
@@ -45,7 +45,6 @@
     "@types/multer-s3": "^2.7.10",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
-    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8"
