--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,22 +14,20 @@ services:
       - POSTGRES_DB=loglife
     volumes: 
       - pgdata:/data/postgres
-    networks:
-      - log
-   
-  app:
-    build: .
-    container_name: loglife
-    ports: 
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-    links:
-      - postgressql
-    depends_on:
-      - postgressql
-    networks:
-      - log
+    
+ # app:
+ #   build: .
+ #   container_name: loglife
+ #   ports: 
+ #     - 3333:3333
+ #   volumes:
+ #     - .:/usr/app
+ #   links:
+ #     - postgressql
+ #   depends_on:
+ #     - postgressql
+ #   networks:
+ #     - log
     
 
 networks:
