--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "jest",
     "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
-    "build": "tsc",
-    "pm2:dev": "pm2 start dist/src/server.js --name transporte-biologico-api"
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist  --copy-files",
+    "pm2": "pm2 start dist/server.js --name transporte-biologico"
   },
   "dependencies": {
     "aws-sdk": "^2.991.0",
+    "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parse": "^4.16.3",
@@ -32,10 +33,16 @@
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.37",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "^4.3.5",
+    "typescript": "^4.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/node": "^7.15.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
@@ -47,6 +54,9 @@
     "@types/multer-s3": "^2.7.10",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
+    "babel-plugin": "^1.0.6",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8"
